# tap-heap

./: README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_heap/: __init__.py  client.py  manifest.py  s3.py  schema.py  streams.py  tap.py  utils.py
tap_heap/schemas/: _key_events_pm__plp_visit_collection.json  checkout_order_confirmation_page_complete_international_order.json  native_mobile_2_0__checkout_complete.json  native_mobile_2_0__product_visit_product.json  pageviews.json  pdp_tap_cross_sell_product_atb_pairsgreatwith.json  redshift_checkout_begin_any_checkout_shopify_or_ge_on_web.json  redshift_checkout_complete_order_placed_app_.json  redshift_checkout_submit_shopify_order_placed.json  redshift_general_tap_add_to_bag.json  redshift_order_confirmation_page_complete_order.json  redshift_pdp_tap_add_to_bag_add_to_cart_.json  redshift_pdp_tap_item_in_carousel.json  redshift_pdp_tap_you_may_also_like_product.json  sessions.json  user_migrations.json  users.json
tests/: __init__.py  test_core.py
