[tool.poetry]
name = "tap-heap"
version = "0.0.1"
description = "`tap-heap` is a Singer tap for Heap, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Alo <chintan.patel@aloyoga.com>"]
keywords = [
    "ELT",
    "Heap",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.31.1" }
fs-s3fs = { version = "^1.1.1", optional = true }
boto3 = { version="^1.28.59" }
fastavro = { version="^1.8.2", python = ">=3.8,<3.12" }
python-snappy = { version="^0.6.1" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
singer-sdk = { version="^0.31.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_heap"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_heap"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-heap = 'tap_heap.tap:TapHeap.cli'
